--- a/apache-kafka/3/compose.yaml
+++ b/apache-kafka/3/compose.yaml
@@ -2,36 +2,60 @@ version: "2"
 
 services:
   kafka-0:
-    image: docker.io/bitnami/kafka:3.5
+    build:
+      dockerfile: Dockerfile
+    image: aaronchenwei/kafka:3.5
     ports:
-      - "9092"
+      - 9094:9094
     environment:
       - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
       - KAFKA_CFG_NODE_ID=0
       - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka-0:9093,1@kafka-1:9093,2@kafka-2:9093
       - KAFKA_KRAFT_CLUSTER_ID=abcdefghijklmnopqrstuv
+      - KAFKA_CFG_BROKER_ID=10000
+      - KAFKA_CFG_BROKER_RACK="DC1"
+
     volumes:
       - kafka_0_data:/bitnami/kafka
+
   kafka-1:
-    image: docker.io/bitnami/kafka:3.5
+    build:
+      dockerfile: Dockerfile
+    image: aaronchenwei/kafka:3.5
     ports:
-      - "9092"
+      - 19094:9094
     environment:
       - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
       - KAFKA_CFG_NODE_ID=1
       - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka-0:9093,1@kafka-1:9093,2@kafka-2:9093
       - KAFKA_KRAFT_CLUSTER_ID=abcdefghijklmnopqrstuv
+      - KAFKA_CFG_BROKER_ID=10001
+      - KAFKA_CFG_BROKER_RACK="DC1"
     volumes:
       - kafka_1_data:/bitnami/kafka
+
   kafka-2:
-    image: docker.io/bitnami/kafka:3.5
+    build:
+      dockerfile: Dockerfile
+    image: aaronchenwei/kafka:3.5
     ports:
-      - "9092"
+      - 29094:9094
     environment:
       - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
       - KAFKA_CFG_NODE_ID=2
       - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka-0:9093,1@kafka-1:9093,2@kafka-2:9093
       - KAFKA_KRAFT_CLUSTER_ID=abcdefghijklmnopqrstuv
+      - KAFKA_CFG_BROKER_ID=10002
+      - KAFKA_CFG_BROKER_RACK="DC2"
     volumes:
       - kafka_2_data:/bitnami/kafka
 
