--- a/apache-cassandra/2/compose.yaml
+++ b/apache-cassandra/2/compose.yaml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   cassandra:
-    image: docker.io/bitnami/cassandra:4.0
+    image: docker.io/bitnami/cassandra:latest
     ports:
       - 7000:7000
       - 9042:9042
@@ -18,7 +18,7 @@ services:
       - HEAP_NEWSIZE=200M
 
   cassandra2:
-    image: docker.io/bitnami/cassandra:4.0
+    image: docker.io/bitnami/cassandra:latest
     ports:
       - 7001:7000
       - 9043:9042
