--- a/apache-zookeeper/single/1/compose.yaml
+++ b/apache-zookeeper/single/1/compose.yaml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   zookeeper:
-    image: zookeeper:${TAG-3.9-jre-17}
+    image: docker.io/zookeeper:${TAG-3.9-jre-17}
     container_name: zookeeper
     hostname: zookeeper
     # restart: unless-stopped
