--- a/apache-janusgraph/1/compose.yaml
+++ b/apache-janusgraph/1/compose.yaml
@@ -3,15 +3,12 @@ version: "3"
 services:
   janusgraph:
     image: docker.io/janusgraph/janusgraph:latest
-    container_name: janusgraph
-    hostname: janusgraph
-    network_mode: bridge
+    container_name: janusgraph-default
     ports:
       - "8182:8182"
     # The mounted volume only makes sense if JanusGraph is being run with the BerekeleyDB storage.
     volumes:
-      - "janusgraph:/var/lib/janusgraph"
+      - "janusgraph-default-data:/var/lib/janusgraph"
 
 volumes:
-  janusgraph:
-    driver: local
+  janusgraph-default-data:
